rel="noreferrer" all the external links

--- a/404.md
+++ b/404.md
@@ -6,7 +6,7 @@ permalink: /404.html
 
 # Error <yeet>four-hundred-and-four!</yeet>
 
-This page may exist on an older version of my website at _<script>document.write(`<a href="https://2019.melody.cool${window.location.pathname}" target="_blank">https://2019.melody.cool${window.location.pathname}</a>`);</script>_
+This page may exist on an older version of my website at _<script>document.write(`<a href="https://2019.melody.cool${window.location.pathname}" target="_blank" rel="noreferrer">https://2019.melody.cool${window.location.pathname}</a>`);</script>_
 
 ---
 
