--- a/_posts/2018-06-01-temple/2018-06-01-temple.md
+++ b/_posts/2018-06-01-temple/2018-06-01-temple.md
@@ -27,10 +27,10 @@ When I started on this project, there was a team of 5 copy writers and developer
 
 > <p>
 > <grid grid column-count="2" phone-column-count="1">
->  <a href="https://wayback.archive.org/web/20161021193725/http://www.cla.temple.edu/american_studies/" target="_blank" class=""><img src="{{ page.assets }}temple-old-as.png" alt=""></a>
->  <a href="https://wayback.archive.org/web/20161022020732/https://www.cla.temple.edu/cj/" target="_blank" class=""><img src="{{ page.assets }}temple-old-cj.png" alt=""></a>
->  <a href="https://wayback.archive.org/web/20161021212258/http://www.cla.temple.edu/womenstu/" target="_blank" class=""><img src="{{ page.assets }}temple-old-gws.png" alt=""></a>
->  <a href="https://wayback.archive.org/web/20161021212507/http://www.cla.temple.edu/neuroscience/" target="_blank" class=""><img src="{{ page.assets }}temple-old-ns.png" alt=""></a>
+>  <a href="https://wayback.archive.org/web/20161021193725/http://www.cla.temple.edu/american_studies/" target="_blank" rel="noreferrer" class=""><img src="{{ page.assets }}temple-old-as.png" alt=""></a>
+>  <a href="https://wayback.archive.org/web/20161022020732/https://www.cla.temple.edu/cj/" target="_blank" rel="noreferrer" class=""><img src="{{ page.assets }}temple-old-cj.png" alt=""></a>
+>  <a href="https://wayback.archive.org/web/20161021212258/http://www.cla.temple.edu/womenstu/" target="_blank" rel="noreferrer" class=""><img src="{{ page.assets }}temple-old-gws.png" alt=""></a>
+>  <a href="https://wayback.archive.org/web/20161021212507/http://www.cla.temple.edu/neuroscience/" target="_blank" rel="noreferrer" class=""><img src="{{ page.assets }}temple-old-ns.png" alt=""></a>
 > </grid>
 > </p>
 
@@ -45,10 +45,10 @@ Taking into account problems of the existing system, we set out to build a new s
 
 > <p>
 > <grid grid column-count="2" phone-column-count="1">
->  <a href="https://www.cla.temple.edu/liberal-studies/" target="_blank" class=""><img src="{{ page.assets }}temple-new-ls.png" alt=""></a>
->  <a href="https://www.cla.temple.edu/pre-law/" target="_blank" class=""><img src="{{ page.assets }}temple-new-pl.png" alt=""></a>
->  <a href="https://develop.cla.temple.edu/psychology/graduate/" target="_blank" class=""><img src="{{ page.assets }}temple-new-psy.png" alt=""></a>
->  <a href="https://develop.cla.temple.edu/neuroscience/faculty/" target="_blank" class=""><img src="{{ page.assets }}temple-new-ns.png" alt=""></a>
+>  <a href="https://www.cla.temple.edu/liberal-studies/" target="_blank" rel="noreferrer" class=""><img src="{{ page.assets }}temple-new-ls.png" alt=""></a>
+>  <a href="https://www.cla.temple.edu/pre-law/" target="_blank" rel="noreferrer" class=""><img src="{{ page.assets }}temple-new-pl.png" alt=""></a>
+>  <a href="https://develop.cla.temple.edu/psychology/graduate/" target="_blank" rel="noreferrer" class=""><img src="{{ page.assets }}temple-new-psy.png" alt=""></a>
+>  <a href="https://develop.cla.temple.edu/neuroscience/faculty/" target="_blank" rel="noreferrer" class=""><img src="{{ page.assets }}temple-new-ns.png" alt=""></a>
 > </grid>
 ></p>
 
