--- a/_posts/2019-04-12-bitcamp/2019-04-12-bitcamp.md
+++ b/_posts/2019-04-12-bitcamp/2019-04-12-bitcamp.md
@@ -36,7 +36,7 @@ So I illustrated our (s)elves building a cool website together!! This is actuall
 
 This illustration is now used in my [Intro to Jekyll](/jekyll-starter) guide!
 
-<a href="{{ page.assets }}colorwar.png?1555223309858" target="_blank" class="button uno"><img src="https://icon.now.sh/insert_photo" /> View Full Size →</a>
+<a href="{{ page.assets }}colorwar.png?1555223309858" target="_blank" rel="noreferrer" class="button uno"><img src="https://icon.now.sh/insert_photo" /> View Full Size →</a>
 
 ![colorwar submission]({{ page.assets }}colorwar.png?1555223309858)
 
@@ -67,7 +67,7 @@ _Prompt: Design an experience for an app to help you with your mood._
 
 I designed an app that improves your mood with just 2 minutes, with the help of exercises, videos, and mini-games created by experts and suggested by artificial intellegence. (Why 2 minutes? Many users don't see taking 2 minutes out of the day as much of a time commitment!)
 
-<a href="https://sketch.cloud/s/49qJo/9PQRRAP/play" target="_blank" class="button uno"><img src="https://icon.now.sh/phone_iphone" /> Launch Sketch Prototype →</a>
+<a href="https://sketch.cloud/s/49qJo/9PQRRAP/play" target="_blank" rel="noreferrer" class="button uno"><img src="https://icon.now.sh/phone_iphone" /> Launch Sketch Prototype →</a>
 
 ![screens]({{ page.assets }}brighten%20artboards.png?1555224488955)
 
@@ -87,7 +87,7 @@ This one was designed specifically for kids to connect with other kids... "in mi
 
 Keeping in mind privacy and laws restricting the use of personally identifiable information from minors under 13, each kid only has their first name and last initial stored, with accounts that can be managed directly by parents.
 
-<a href="https://sketch.cloud/s/49qJo/oY2110Y/play" target="_blank" class="button uno"><img src="https://icon.now.sh/phone_iphone" /> Launch Sketch Prototype →</a>
+<a href="https://sketch.cloud/s/49qJo/oY2110Y/play" target="_blank" rel="noreferrer" class="button uno"><img src="https://icon.now.sh/phone_iphone" /> Launch Sketch Prototype →</a>
 
 ![logo]({{ page.assets }}treetop.png?1555223856126)
 
@@ -99,7 +99,7 @@ I worked with a team who had an idea of making bitcoin as seamless as Venmo, and
 
 The rest of my left Bitcamp on Friday night never to seen again, and the only thing that got built was this protoype I spent hours working on. (Maybe it counts as an attempt to democratize financial services? Who knows!)
 
-<a href="https://sketch.cloud/s/49qJo/QbYjjv8/play" target="_blank" class="button uno"><img src="https://icon.now.sh/phone_iphone" /> Launch Sketch Prototype →</a>
+<a href="https://sketch.cloud/s/49qJo/QbYjjv8/play" target="_blank" rel="noreferrer" class="button uno"><img src="https://icon.now.sh/phone_iphone" /> Launch Sketch Prototype →</a>
 
 ![screens]({{ page.assets }}bitpay%20artboards.png?1555224619997)
 
