Update splatoon teams

--- a/_posts/2019-05-01-splatoon/2019-05-01-splatoon.md
+++ b/_posts/2019-05-01-splatoon/2019-05-01-splatoon.md
@@ -74,20 +74,20 @@ I am currently experimenting with Mixer's overlay system and building an interac
 
 ## Teams, Orgs, 'n' Events
 
-I stay fresh with playing, subbing, or just hanging out with profreshional squid game teams. Here's where you can currnetly find me:
+I stay fresh with playing, subbing, or just hanging out with profreshional teams. Here's where you can currently find me:
 
+- Squid Together (&&)
+- Tuffer Puffers (T¤)
 - Hormone Replacement Gaming (HRG)
-- Tuffer Puffers
-- Crown Fresh
-- Squids in a Steel Furnace
+- CrownFresh (€ƒ♕)
+- Squids in a Steel Furnace (SSF)
 
 I have also participated in these tournaments:
 
-- Smash 'N' Splash (Wiscousion Dells WI)
-- Breakon (Deer Park NY)
+- Smash 'N' Splash (Madison Wiscousion WI)
+- Beakon (Deer Park NY)
 - Long Island Splat (Deer Park NY)
 - Splatboro (Hatboro PA)
 - Landfall (Hollywood FL)
-- Into the Harbor (Baltimore MD)
 - LUTI (online)
 - Sunday Morning Coffee (online)
