--- a/_posts/2019-05-01-splatoon/2019-05-01-splatoon.md
+++ b/_posts/2019-05-01-splatoon/2019-05-01-splatoon.md
@@ -16,7 +16,7 @@ image: meta-preview.png
 assets: https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/
 ---
 
-<p class="lead"><strong>Splatoon 2</strong> is Nintendo's latest and freshest multiplayer game where inklings and octolings fight for turf using art-inspired weapons— it's super fun to play and even more interesting to watch! I'm proud to be part of a esports community is as friendly and inclusive as it gets!</p>
+<p class="lead"><strong>Splatoon 2</strong> is Nintendo's latest and freshest multiplayer game where inklings and octolings fight for turf using art-inspired weapons— it's super fun to play and even more fun to watch! I'm proud to be part of a esports community is as friendly and inclusive as it gets!</p>
 
 > ### Follow me on Twitch!
 >
