--- a/_posts/events/2019-09-10-events.md
+++ b/_posts/events/2019-09-10-events.md
@@ -14,7 +14,10 @@ feature:
 image: meta-preview.png
 ---
 
-<p class="lead">Here is a list of events I am planning to attend or speak at!</p>
+
+<p class="lead">Here is a list of events I am planning to attend or speak at! (You can find more info on my public Notion page:)</p>
+
+<a href="https://notion.melody.dev/" class="button uno" target="_blank" rel="noreferrer">Melody on Notion →</a>
 
 **Need a speaker at your event? Feel free to get in touch with me!** You can find some of my recent talks under the <a href="/hashtag/talks" class="uno">#talks</a> hashtag, and an additional list of planned topics at the bottom of this page.
 
