"the big strangeloop update"

--- a/_posts/2018-11-08-ie6/2018-11-08-ie6.md
+++ b/_posts/2018-11-08-ie6/2018-11-08-ie6.md
@@ -18,10 +18,7 @@ Here's a talk I gave at **QueensJS November 2018** about my struggles with havin
 
 <script async class="speakerdeck-embed" data-id="a01f6d6764574986a413703a4c3a8ab4" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
 
+## Links & Resources
 
-
-
-
-
-
-
+- [Slides on speakerdeck](https://speakerdeck.com/pixely/ie6-like-its-2018)
+- [FBI Security](http://www.fbisecurity.com)
