--- a/_posts/2019-05-13-guru/2019-05-13-guru.md
+++ b/_posts/2019-05-13-guru/2019-05-13-guru.md
@@ -17,7 +17,7 @@ assets: https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/
 image: meta-preview.png
 ---
 
-I spent a few months working with Guru to improve their customer-facing product (and to brush up on my React skills!) Here is a taste of just some of the things I did:
+<p class="lead">I spent a few months working with <strong>Guru</strong> to improve their customer-facing product (and to brush up on my React skills!) Here is a taste of just some of the things I did:</p>
 
 ## A better on-boarding experience
 
