some content updates

--- a/_posts/2019-05-01-splatoon/2019-05-01-splatoon.md
+++ b/_posts/2019-05-01-splatoon/2019-05-01-splatoon.md
@@ -73,7 +73,19 @@ At the beginning of each match, each team is randomly assigned a color. Using th
 
 I am currently experimenting with Mixer's overlay system and building an interactive overlay that allows viewers to see live results (seconds before they appear on screen), and view previous matches. This will be the subject of a future talk at a Vue or Tech x Gaming meetup near you!
 
-## Teams, Orgs, 'n' Events
+## Splat Tourneys
+
+I have participated in these tournaments:
+
+- Smash 'N' Splash (Madison Wisconsin WI)
+- Beakon (Deer Park NY)
+- Long Island Splat (Deer Park NY)
+- Splatboro (Hatboro PA)
+- Landfall (Hollywood FL)
+- LUTI (online)
+- Sunday Morning Coffee (online)
+
+<!-- ## Teams, Orgs, 'n' Events
 
 I stay fresh with playing, subbing, or just hanging out with profreshional teams. Here's where you can currently find me:
 
@@ -82,13 +94,4 @@ I stay fresh with playing, subbing, or just hanging out with profreshional teams
 - Hormone Replacement Gaming (HRG)
 - CrownFresh (€ƒ♕)
 - Squids in a Steel Furnace (SSF)
-
-I have also participated in these tournaments:
-
-- Smash 'N' Splash (Madison Wiscousion WI)
-- Beakon (Deer Park NY)
-- Long Island Splat (Deer Park NY)
-- Splatboro (Hatboro PA)
-- Landfall (Hollywood FL)
-- LUTI (online)
-- Sunday Morning Coffee (online)
+ -->
