replace clocks with queerjs

--- a/_posts/2019-10-11-queerjs/2019-10-11-queerjs.md
+++ b/_posts/2019-10-11-queerjs/2019-10-11-queerjs.md
@@ -1,6 +1,6 @@
 ---
-title: Subway Countdown Clocks
-tags: work design transit
+title: TacoJS & QueerJS
+tags: work
 accent: orange
 tile:
   order: 4
@@ -10,10 +10,9 @@ tile:
   image: tile.png
 feature:
   width: 17
-  height: 11
+  height: 9
   image: feature.png
 image: meta-preview.png
-hidden: true
 draft: true
 ---
 
