small content changes

--- a/_posts/2019-05-01-splatoon/2019-05-01-splatoon.md
+++ b/_posts/2019-05-01-splatoon/2019-05-01-splatoon.md
@@ -29,7 +29,7 @@ assets: https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/
 
 As part of my Twitch stream series and as a member of the Splatoon community, I worked on a bunch of various jawns to help players improve their game and style!
 
-## Design System
+## Design System 🎨
 
 I designed a digital graphics package and design system for my Twitch stream, and additional graphics for future Splatoon-related events such as tournaments and meetups! Here is just a sample of the assets I use in my jawns:
 
@@ -57,23 +57,23 @@ _PS the game mode icons have been made into stickers!!_
 
 ![stickers]({{ page.assets }}splatoon-stickers.jpg)
 
-## Current Stages Overlay
+## Current Stages Overlay 🏙
 
 I worked on an overlay for OBS that displays the current stages and modes. You can find it online at [pixelyunicorn.github.io/splat-overlay](https://pixelyunicorn.github.io/splat-overlay/). Feel free to embed this page into your streams!
 
 ![Screenshot of OBS with a web page overlay]({{ page.assets }}splatoon-splat-overlay.jpg)
 
-## Philips Hue integration
+## Philips Hue integration 💡
 
 At the beginning of each match, each team is randomly assigned a color. Using the power of OpenCV, I tossed together a python script that detects your team's color and changes the ambient lighting of the room to match that color!
 
-> TODO: Create GIF and put script on GitHub
+> TODO: Create a GIF of this in action!
 
-## Mixer Overlay
+## Mixer Overlay 🍿
 
 I am currently experimenting with Mixer's overlay system and building an interactive overlay that allows viewers to see live results (seconds before they appear on screen), and view previous matches. This will be the subject of a future talk at a Vue or Tech x Gaming meetup near you!
 
-## Splat Tourneys
+## Splat Tourneys 🎮
 
 I have participated in these tournaments:
 
