change some pngs to svgs

--- a/_posts/2018-06-01-temple/2018-06-01-temple.md
+++ b/_posts/2018-06-01-temple/2018-06-01-temple.md
@@ -6,11 +6,11 @@ tile:
   order: -1
   width: 5
   height: 5
-  image: tile.png
+  image: tile.svg
 feature:
   width: 15
   height: 9
-  image: feature.png
+  image: feature.svg
 image: meta-preview.png
 assets: https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/
 ---
