--- a/_posts/2018-05-31-codeday/2018-05-31-codeday.md
+++ b/_posts/2018-05-31-codeday/2018-05-31-codeday.md
@@ -6,11 +6,11 @@ tile:
   order: 7
   width: 6
   height: 6
-  image: tile.png
+  image: ../events/tile.svg
 feature:
   width: 16
   height: 10
-  image: feature.png
+  image: ../events/feature.svg
 image: meta-preview.png
 assets: https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/
 hidden: true
