--- a/_posts/2018-11-08-ie6/2018-11-08-ie6.md
+++ b/_posts/2018-11-08-ie6/2018-11-08-ie6.md
@@ -6,11 +6,11 @@ tile:
   order: 16
   width: 5
   height: 5
-  image: tile.png
+  image: tile.svg
 feature:
   width: 17
   height: 9
-  image: feature.png
+  image: feature.svg
 image: meta-preview.png
 ---
 
