--- a/_posts/2019-05-13-guru/2019-05-13-guru.md
+++ b/_posts/2019-05-13-guru/2019-05-13-guru.md
@@ -8,11 +8,11 @@ tile:
   height: 5
   left: 1
   top: 1
-  image: tile.png
+  image: tile.svg
 feature:
   width: 17
   height: 9
-  image: feature.png
+  image: feature.svg
 assets: https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/
 image: meta-preview.png
 ---
