--- a/_posts/events/2019-09-10-events.md
+++ b/_posts/events/2019-09-10-events.md
@@ -6,11 +6,11 @@ tile:
   order: 6
   width: 6
   height: 6
-  image: tile.png
+  image: tile.svg
 feature:
   width: 16
   height: 10
-  image: feature.png
+  image: feature.svg
 image: meta-preview.png
 ---
 
