--- a/_posts/2019-10-11-queerjs/2019-10-11-queerjs.md
+++ b/_posts/2019-10-11-queerjs/2019-10-11-queerjs.md
@@ -7,11 +7,11 @@ tile:
   width: 5
   height: 5
   top: 2
-  image: tile.png
+  image: tile.svg
 feature:
   width: 17
   height: 9
-  image: feature.png
+  image: feature.svg
 image: meta-preview.png
 draft: true
 ---
