big content cleanup

--- a/_posts/events/2019-12-23-events.md
+++ b/_posts/events/2019-12-23-events.md
@@ -18,25 +18,23 @@ image: meta-preview.png
 
 <a href="https://notion.melody.dev/" class="button uno" target="_blank" rel="noreferrer">Melody on Notion →</a>
 
-**Need a speaker at your event? Feel free to get in touch with me!** You can find some of my recent talks under the <a href="/hashtag/talks" class="uno">#talks</a> hashtag, and an additional list of planned topics at the bottom of this page.
+( add image here via glitch )
 
----
-
-{% include events.html %}
+> **Need a speaker at your event? Feel free to get in touch with me!** You can find some of my recent talks under the <a href="/hashtag/talks" class="uno">#talks</a> hashtag, and an additional list of planned topics at the bottom of this page.
 
 ---
 
 ## Planned Talk Topics
 
-Here is a (non-exhaustive) list of topics I am planning to speak about in 2019!
+Here is a non-exhaustive list of topics I am planning to speak about in 2019! (Stay tuned for 2020 topics!)
 
 ### Javascript
 
 - Streaming Splatoon 2 with Real-Time Data
-- [Spook Your Friends with Electron](/spooky-electron)
-- [lofi hip hop beats to npm install to](/lofi-npm)
+- [Spook Your Friends with Electron](/spooky-electron) ✅
+- [lofi hip hop beats to npm install to](/lofi-npm) ✅
 - Making Music with React
-- An Absurd Intro to React Hooks
+- [An Absurd Intro to React Hooks](/react) (partial ✅)
 - An Absurd Intro to React Hooks (pony edition)
 
 ### CSS
@@ -46,13 +44,13 @@ Here is a (non-exhaustive) list of topics I am planning to speak about in 2019!
 
 ### Hackathons &amp; Communities
 
-- Creating Inclusive Spaces
+- Creating Inclusive Spaces ✅
 - Automate Your Event with Chat Bots
 
 ### Tech for Non Tech People
 
 - Quick Dive into Frontend Dev
-- [Quick Dive into Frontend Dev (pony edition)](https://speakerdeck.com/pixely/how-equestria-was-made-building-efnws-website-by-pixely-number-ponydev-at-everfree-northwest-1)
+- [Quick Dive into Frontend Dev (pony edition)](https://speakerdeck.com/pixely/how-equestria-was-made-building-efnws-website-by-pixely-number-ponydev-at-everfree-northwest-1) ✅
 
 ### Workshops
 
