clean up the .lead tags

--- a/_posts/2018-06-01-temple/2018-06-01-temple.md
+++ b/_posts/2018-06-01-temple/2018-06-01-temple.md
@@ -15,9 +15,7 @@ image: meta-preview.png
 assets: https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/
 ---
 
-<p class="lead">
-   <strong>Temple University’s College of Liberal Arts</strong> needed a way to quickly unify the content and design for their overall web presence. I created a simple development and editorial workflow as allowed a small team to launch 40 new websites in a year.
-</p>
+**Temple University’s College of Liberal Arts** needed a way to quickly unify the content and design for their overall web presence. I created a simple development and editorial workflow as allowed a small team to launch 40 new websites in a year. 🕸
 
 ---
 
