--- a/_posts/2018-09-05-septa/2018-09-05-septa.md
+++ b/_posts/2018-09-05-septa/2018-09-05-septa.md
@@ -15,9 +15,7 @@ image: feature.svg
 assets: https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/
 ---
 
-<p class="lead">
-  With 306.9 million annual trips, the <strong>Southeastern Pennsylvania Transportation Authority (SEPTA)</strong> has a heavily-utilized System Status page that displays critical information for riders, such as real time vehicle locations, detours, delays, and suspensions. I managed the project and work alonside the development team at <strong>PennApps Fellows</strong> to redesign and rewrite that page for the mobile era.
-</p>
+With 306.9 million annual trips, the **Southeastern Pennsylvania Transportation Authority (SEPTA)** has a heavily-utilized System Status page that displays critical information for riders, such as real time vehicle locations, detours, delays, and suspensions. I managed the project and work alonside the development team at **PennApps Fellows** to redesign and rewrite that page for the mobile era.
 
 <a class="uno button" href="https://septa.neocities.org/" target="_blank" rel="noreferrer">{% include icons/external-fill.svg size="24" %} View Archived Site (septa.neocities.org)</a>
 
