--- a/_posts/events/2019-12-23-events.md
+++ b/_posts/events/2019-12-23-events.md
@@ -14,17 +14,17 @@ feature:
 image: meta-preview.png
 ---
 
-<p class="lead">Here is a list of events I am planning to attend or speak at! (You can find more info on my public Notion page:)</p>
+Here is a list of events I am planning to attend or speak at! (You can find more info on my public Notion page:) 🗓
 
 <a href="https://notion.melody.dev/" class="button uno" target="_blank" rel="noreferrer">Melody on Notion →</a>
 
 ( add image here via glitch )
 
-> **Need a speaker at your event? Feel free to get in touch with me!** You can find some of my recent talks under the <a href="/hashtag/talks" class="uno">#talks</a> hashtag, and an additional list of planned topics at the bottom of this page.
+> **Need a speaker at your event? Feel free to get in touch with me!** You can find some of my recent talks under the [#talks](/hashtag/talks) hashtag, and an additional list of planned topics at the bottom of this page.
 
 ---
 
-## Planned Talk Topics
+## Planned Talk Topics 🤔
 
 Here is a non-exhaustive list of topics I am planning to speak about in 2019! (Stay tuned for 2020 topics!)
 
