🚦🌌 move icons to cdn

--- a/_posts/2019-05-01-splatoon/2019-05-01-splatoon.md
+++ b/_posts/2019-05-01-splatoon/2019-05-01-splatoon.md
@@ -23,7 +23,7 @@ assets: https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/
 >
 > Come hang out with me! I'm really just here to have a great time, so sit back, stay for a while, and send me some positive vibes. <コ:彡   C:彡
 >
-> <a class="button" href="https://twitch.tv/pixelysquid" target="_blank" rel="noreferrer"><img src="https://icon.now.sh/twitch/6441a5" class="visible-theme-light" height="14" width="14" /><img src="https://icon.now.sh/twitch/b9a3e3" class="visible-theme-dark" height="14" width="14" /> @pixelysquid on Twitch</a>
+> <a class="button" href="https://twitch.tv/pixelysquid" target="_blank" rel="noreferrer"><img src="https://static.twitchcdn.net/assets/favicon-32-d6025c14e900565d6177.png" height="14" width="14" /> @pixelysquid on Twitch</a>
 
 ---
 
