--- a/_posts/events/2019-12-23-events.md
+++ b/_posts/events/2019-12-23-events.md
@@ -16,7 +16,7 @@ image: meta-preview.png
 
 Here is a list of events I am planning to attend or speak at! (You can find more info on my public Notion page:) 🗓
 
-<a href="https://notion.melody.dev/" class="button uno" target="_blank" rel="noreferrer">Melody on Notion →</a>
+<a href="https://notion.melody.dev/" class="button uno" target="_blank" rel="noreferrer">📓 Melody on Notion →</a>
 
 ( add image here via glitch )
 
