--- a/_posts/events/2019-12-23-events.md
+++ b/_posts/events/2019-12-23-events.md
@@ -16,11 +16,11 @@ image: meta-preview.png
 
 Here is a list of events I am planning to attend or speak at! (You can find more info on my public Notion page:) 🗓
 
+- None right now (thanks, COVID!)
+
 <a href="https://notion.melody.dev/" class="button uno" target="_blank" rel="noreferrer">📓 Melody on Notion →</a>
 
-( add image here via glitch )
-
-> **Need a speaker at your event? Feel free to get in touch with me!** You can find some of my recent talks under the [#talks](/hashtag/talks) hashtag, and an additional list of planned topics at the bottom of this page.
+> **Need a speaker at your (online) event? Feel free to get in touch with me!** You can find some of my recent talks under the [#talks](/hashtag/talks) hashtag, and an additional list of planned topics at the bottom of this page.
 
 ---
 
