move meta previews to glitch

--- a/_posts/2018-11-08-ie6/2018-11-08-ie6.md
+++ b/_posts/2018-11-08-ie6/2018-11-08-ie6.md
@@ -11,7 +11,7 @@ feature:
   width: 17
   height: 9
   image: feature.svg
-image: meta-preview.png
+image: https://cdn.glitch.com/d3e253ff-871d-442c-988d-a70ce0de1dc3/ie6-meta-preview.png
 ---
 
 Here's a talk from **QueensJS November 2018** about my struggles with having to support **Internet Explorer 6** in 2018, a browser that is old enough to vote in the United States! It's still used by schools and governments in the Philadelphia area so maintaining even a minimum level of support is quite important. 🎓
