--- a/_posts/2019-05-11-lofi-npm/2019-05-11-lofi-npm.md
+++ b/_posts/2019-05-11-lofi-npm/2019-05-11-lofi-npm.md
@@ -11,7 +11,7 @@ feature:
   width: 16
   height: 11
   image: feature.png
-image: meta-preview.png
+image: https://cdn.glitch.com/d3e253ff-871d-442c-988d-a70ce0de1dc3/lofi-npm-meta-preview.png?v=1604549078819
 ---
 
 Here's a talk I gave at **!!Con 2019, BrooklynJS April 2019, Philly JS Meetup April 2019** about generating music with package managers!
