--- a/_posts/2019-05-01-splatoon/2019-05-01-splatoon.md
+++ b/_posts/2019-05-01-splatoon/2019-05-01-splatoon.md
@@ -13,7 +13,7 @@ feature:
   width: 17
   height: 11
   image: feature.png
-image: meta-preview.png
+image: https://cdn.glitch.com/d3e253ff-871d-442c-988d-a70ce0de1dc3/splatoon-meta-preview.png
 assets: https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/
 ---
 
