--- a/_posts/2019-05-13-guru/2019-05-13-guru.md
+++ b/_posts/2019-05-13-guru/2019-05-13-guru.md
@@ -14,7 +14,7 @@ feature:
   height: 9
   image: feature.svg
 assets: https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/
-image: meta-preview.png
+image: https://cdn.glitch.com/d3e253ff-871d-442c-988d-a70ce0de1dc3/guru-meta-preview.png
 ---
 
 I spent a few months working with **Guru** to improve their customer-facing product (and to brush up on my React skills!) Here is a taste of just some of the things I did:
