--- a/_posts/2019-10-11-queerjs/2019-10-11-queerjs.md
+++ b/_posts/2019-10-11-queerjs/2019-10-11-queerjs.md
@@ -12,7 +12,7 @@ feature:
   width: 17
   height: 9
   image: feature.svg
-image: meta-preview.png
+image: https://cdn.glitch.com/d3e253ff-871d-442c-988d-a70ce0de1dc3/queerjs-meta-preview.png
 draft: true
 ---
 
