--- a/_posts/events/2019-12-23-events.md
+++ b/_posts/events/2019-12-23-events.md
@@ -11,7 +11,7 @@ feature:
   width: 16
   height: 10
   image: feature.svg
-image: meta-preview.png
+image: https://cdn.glitch.com/d3e253ff-871d-442c-988d-a70ce0de1dc3/events-meta-preview.png
 ---
 
 Here is a list of events I am planning to attend or speak at! (You can find more info on my public Notion page:) 🗓
